manifests/cluster-addons/media/tdarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      nodeSelector:
        intel.feature.node.kubernetes.io/gpu: 'true'
      securityContext:
        fsGroup: 1000
        supplementalGroups:
          - 44
          - 105
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:latest
          ports:
            - name: webui
              containerPort: 8265
            - name: server
              containerPort: 8266
          resources:
            limits:
              gpu.intel.com/i915: '1'
            requests:
              cpu: 2
              memory: 2Gi
          volumeMounts:
            - name: data
              mountPath: /app/configs
            - name: media
              mountPath: /media
            - name: transcode
              mountPath: /transcode
            - name: dri
              mountPath: /dev/dri
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tdarr-data
        - name: media
          persistentVolumeClaim:
            claimName: shared-media
        - name: transcode
          emptyDir: {}
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
