manifests/cluster-addons/media/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: media
spec:
  selector:
    app: tdarr
  ports:
    - name: webui
      port: 8265
      targetPort: 8265
    - name: server
      port: 8266
      targetPort: 8266
